2013-02-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45872: Generate xliff language file for language pack
	* Resolves #45875: Generate domain models partials for language pack

2013-02-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45810: Require TYPO3 6.0.2 and PHP 5.3.7

2013-02-22  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45764: Connect static_country_zones to static_countries
	* Apply TCA userFuncs to Static Info Tables Manager tables
	* Fixes #45766: Incorrect label in backend module regarding localization labels and language packs

2013-02-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45732: Connect static_territories with static_countries
	* Resolves #45737: Connect static_countries to static_currencies
	* Fixes #45739: Call to deprecated t3lib_div::view_array


2013-02-20  Stanislas Rolland  <typo3@sjbr.ca>

	* Resolves #45690: Require TYPO3 4.7
	* Updated version to 2.4.0
	* Resolves #45691: Always keep tables utf-8-encoded
	
2012-01-12  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #33155: Call to deprecated bigDoc::middle method
	* Updated version to 2.2.1

2011-01-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Initial upload
	* Updated version to 2.2
