@@ -1,0 +1,42 @@
+config.tx_extbase {
+	persistence {
+		classes {
+			SJBR\StaticInfoTables\Domain\Model\Country {
+				mapping {
+					columns {
+						cn_short_en.mapOnProperty = shortName###LANG_ISO_CAMEL###
+					}
+				}
+			}
+			SJBR\StaticInfoTables\Domain\Model\CountryZone {
+				mapping {
+					columns {
+						zn_name_en.mapOnProperty = name###LANG_ISO_CAMEL###
+					}
+				}
+			}
+			SJBR\StaticInfoTables\Domain\Model\Currency {
+				mapping {
+					columns {
+						cu_name_en.mapOnProperty = name###LANG_ISO_CAMEL###
+						cu_sub_name_en.mapOnProperty = subdivisionName###LANG_ISO_CAMEL###
+					}
+				}
+			}
+			SJBR\StaticInfoTables\Domain\Model\Language {
+				mapping {
+					columns {
+						lg_name_en.mapOnProperty = name###LANG_ISO_CAMEL###
+					}
+				}
+			}
+			SJBR\StaticInfoTables\Domain\Model\Territory {
+				mapping {
+					columns {
+						tr_name_en.mapOnProperty = name###LANG_ISO_CAMEL###
+					}
+				}
+			}
+		}
+	}
+}
